# notification-hub

./: .gitignore  README.md  pyproject.toml  test_slack_manual.py
src/: cli.py
src/notification_hub/: __init__.py  factory.py
src/notification_hub/core/: abstract_provider.py
src/notification_hub/providers/: jira.py  slack.py
src/notification_hub/utils/: jira_utils.py
tests/: conftest.py  test_jira.py  test_slack.py
